fixed spacing in html

--- a/index.css
+++ b/index.css
@@ -224,5 +224,7 @@ input[type=submit]:hover {
   zoom:1.12;
 }
 
+#newcard{
+}
 
 
